@@ -10,6 +10,7 @@
       Sys#chdir, Sys::IO#chdir
       Sys::IO#truncate
       Sys::Process#execv
+      Sys#unlink, Sys::IO::Windows#unlink
     
 0.538 2025-05-21
   [Bug Fix]
